--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.0"
-  }
+  },
+  "scripts": {
+    "start": "node src/index.js"
+}
 }
